src/test/ui/generic-associated-types/impl_bounds.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/impl_bounds.rs:15:39
   |
LL |     type A<'a> = (&'a ()) where Self: 'static;
   |                                       ^^^^^^^ ...so that the definition in impl matches the definition from the trait
   |
help: consider adding an explicit lifetime bound...
   |
LL | impl<T: 'static> Foo for Fooy<T> {
   |       +++++++++

error[E0276]: impl has stricter requirements than trait
  --> $DIR/impl_bounds.rs:17:48
   |
LL |     type B<'a, 'b> where 'a: 'b;
   |     -------------- definition of `B` from trait
...
LL |     type B<'a, 'b> = (&'a(), &'b ()) where 'b: 'a;
   |                                                ^^ impl has extra requirement `'b: 'a`

error[E0478]: lifetime bound not satisfied
  --> $DIR/impl_bounds.rs:17:22
   |
LL |     type B<'a, 'b> where 'a: 'b;
   |     -------------- definition of `B` from trait
...
LL |     type B<'a, 'b> = (&'a(), &'b ()) where 'b: 'a;
   |                      ^^^^^^^^^^^^^^^             - help: try copying this clause from the trait: `, 'a: 'b`
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/impl_bounds.rs:17:12
   |
LL |     type B<'a, 'b> = (&'a(), &'b ()) where 'b: 'a;
   |            ^^
note: but lifetime parameter must outlive the lifetime `'b` as defined here
  --> $DIR/impl_bounds.rs:17:16
   |
LL |     type B<'a, 'b> = (&'a(), &'b ()) where 'b: 'a;
   |                ^^

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/impl_bounds.rs:20:33
   |
LL |     type C = String where Self: Copy;
   |                                 ^^^^ the trait `Copy` is not implemented for `T`
   |
note: required because of the requirements on the impl of `Copy` for `Fooy<T>`
  --> $DIR/impl_bounds.rs:11:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^
note: the requirement `Fooy<T>: Copy` appears on the associated impl type `C` but not on the corresponding associated trait type
  --> $DIR/impl_bounds.rs:7:5
   |
LL | trait Foo {
   |       --- in this trait
...
LL |     type C where Self: Clone;
   |     ^^^^^^ this trait associated type doesn't have the requirement `Fooy<T>: Copy`
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo for Fooy<T> {
   |       +++++++++++++++++++

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/impl_bounds.rs:22:24
   |
LL |     fn d() where Self: Copy {}
   |                        ^^^^ the trait `Copy` is not implemented for `T`
   |
note: required because of the requirements on the impl of `Copy` for `Fooy<T>`
  --> $DIR/impl_bounds.rs:11:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^
note: the requirement `Fooy<T>: Copy` appears on the impl method `d` but not on the corresponding trait method
  --> $DIR/impl_bounds.rs:8:8
   |
LL | trait Foo {
   |       --- in this trait
...
LL |     fn d() where Self: Clone;
   |        ^ this trait method doesn't have the requirement `Fooy<T>: Copy`
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo for Fooy<T> {
   |       +++++++++++++++++++

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0276, E0277, E0310, E0478.
For more information about an error, try `rustc --explain E0276`.
